fix(card): high contrast on chromium edge

--- a/projects/ng-aquila/src/card/selectable-card.component.scss
+++ b/projects/ng-aquila/src/card/selectable-card.component.scss
@@ -113,15 +113,22 @@
 }
 
 @media screen and (-ms-high-contrast: active) {
-  :host {
-    label {
+  :host,
+  :host(.has-error) {
+    label,
+    label:hover {
       border-color: buttonText;
     }
 
-    input:checked + label {
+    input:checked + label,
+    input:checked + label:hover {
       border-width: nx-border-size(l);
       padding: nx-spacer(s) - nx-border-size(l) + nx-border-size(xs);
       border-color: highlight;
+
+      ::ng-deep nx-icon.checked-icon {
+        color: CanvasText;
+      }
     }
   }
 
